# pear

./: .gitattributes  .gitmodules  BUILD.md  CMakeLists.txt  Dockerfile.windows  LICENSE  README-build.md  README.md  build-linux.sh  build-macos.sh  build-windows-docker.sh  build-windows-no-i2p.sh  build-windows-simple.sh  build-windows.bat  build-windows.sh  build.bat  build.sh  fixed_peer.cpp
build-windows/: CMakeCache.txt  Makefile  cmake_install.cmake
build-windows-no-i2p/: CMakeCache.txt  Makefile  cmake_install.cmake
build-windows-simple/: CMakeCache.txt  Makefile  cmake_install.cmake  pear.rc
cmake/: FindSodium.cmake
docs/: README.md
icons/: pear.icns
include/: chat.h  crypto.h  logger.h  peer.h  serialization.h
include-snapshot/: commands.h  common.h  i2p.h  logger.h  peer.h  utils.h
libsodium/: CMakeLists.txt
src/: chat.c  chat.h  commands.c  commands.h  common.c  common.h  crypto_utils.c  crypto_utils.h  logger.cpp  main.c  main.cpp  nat_traversal.c  nat_traversal.h  pear.c  stun_utils.h  utils.cpp
src-snapshot/: main.cpp  utils.cpp
src-snapshot/chat/: commands.cpp
src-snapshot/net/: peer.cpp
src/chat/: chat.cpp  commands.cpp  serialization.c
src/crypto/: crypto.c
src/legacy/: all.txt  crypto_utils.c  main.c  stun_utils.c
src/net/: .peer.cpp.swp  i2p.c  i2p_wrapper.cpp  peer.cpp
